# fixdiff

./: .gitignore  .sai.json  CMakeLists.txt  LICENSE  README.md  fixdiff.c
.github/: codacy.yml
.github/workflows/: codacy.yml
tests/: runtest.cmake
tests/1/: gemini.patch  test.sh
tests/2/: deaddrop.js-orig  gemini.patch  gemini2.patch
tests/4/: gemini.patch
tests/5/: gemini.patch
tests/6/: gemini.patch
tests/7/: gemini.patch
tests/8/: gemini.patch
tools/: concat.sh
